<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ControlActivity">


    <Button
        android:id="@+id/but_activateDoor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="144dp"
        android:text="@string/but_activateDoor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_text_p"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/but_addSuscription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:text="@string/but_addSuscription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/et_text_p"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button_desactivateDoor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Desactivar"
        app:layout_constraintBottom_toBottomOf="@+id/but_activateDoor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.588"
        app:layout_constraintStart_toEndOf="@+id/but_activateDoor"
        app:layout_constraintTop_toTopOf="@+id/but_activateDoor"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/et_text_p"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:importantForAutofill="no"
        android:inputType="text"
        android:text="@string/et_text_str"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_num_p"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.027" />

    <LinearLayout
        android:id="@+id/ll_fragm_p"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"></LinearLayout>

    <TextView
        android:id="@+id/tv_num_p"
        android:layout_width="76dp"
        android:layout_height="19dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/tv_num"
        app:layout_constraintBottom_toBottomOf="@+id/et_text_p"
        app:layout_constraintEnd_toStartOf="@+id/et_text_p"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/et_text_p" />


</androidx.constraintlayout.widget.ConstraintLayout>